[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://app_theme.tres" type="Theme" id=2]
[ext_resource path="res://Sound/jingles_SAX10.ogg" type="AudioStream" id=3]
[ext_resource path="res://focus.tres" type="StyleBox" id=4]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Result" type="Label" parent="."]
margin_left = 34.0
margin_top = 43.0
margin_right = 981.0
margin_bottom = 222.0
theme = ExtResource( 2 )

[node name="TryAgainButton" type="Button" parent="."]
margin_left = 45.0
margin_top = 272.0
margin_right = 304.0
margin_bottom = 346.0
focus_neighbour_left = NodePath("../BackButton")
focus_neighbour_top = NodePath("../BackButton")
focus_neighbour_right = NodePath("../BackButton")
focus_neighbour_bottom = NodePath("../BackButton")
focus_next = NodePath("../BackButton")
focus_previous = NodePath("../BackButton")
theme = ExtResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
text = "Try again"

[node name="BackButton" type="Button" parent="."]
margin_left = 46.0
margin_top = 425.0
margin_right = 187.0
margin_bottom = 499.0
focus_neighbour_left = NodePath("../TryAgainButton")
focus_neighbour_top = NodePath("../TryAgainButton")
focus_neighbour_right = NodePath("../TryAgainButton")
focus_neighbour_bottom = NodePath("../TryAgainButton")
focus_next = NodePath("../TryAgainButton")
focus_previous = NodePath("../TryAgainButton")
theme = ExtResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
text = "Back"

[node name="GameOverNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
